# CSDS337-Compiler-Design

PG1/: README.md
PG1/dragon-front-source/front/: Makefile
PG1/dragon-front-source/front/input/: PG1-1-correct.t  PG1-2-correct.t
PG1/dragon-front-source/front/lexer/: Lexer.java
PG1/dragon-front-source/front/output/: PG1-1-correct.i
PG1/dragon-front-source/front/parser/: Parser.java
PG2/Docs/: main.tex
PG2/src/: Makefile  Readme.MD  compile_commands.json  input.txt  lexer.l  parser.y  parsetree.dot  parsetree.h
PG2/starter_code/: Makefile  grammar.txt  lex.yy.cc  lexer.l  parser  parser.tab.cc  parser.tab.hh  parser.y  parsetree.dot
PG3/: CMakeLists.txt  CSDS337-Spring24-PG3.tex  README.md  WINDOWS_SETUP.md  sampleMod.bc  testGenerations  testGenerations.cpp  testGenerations.sh
PG3/src/: main.cpp
PG4-Try1/: CMakeLists.txt
PG4-Try1/src/expressions/: and.cpp  and.h  bool2Int.cpp  bool2Int.h  comparison.cpp  division.cpp  division.h  int2Bool.cpp  multiplication.cpp  multiplication.h  negative.cpp  negative.h  sub.cpp
PG4-Try1/src/frontend/: CMakeLists.txt  lexer.l  parser.y
PG4-Try1/src/statements/: for.cpp  for.h
PG4-Try1/tests/: forBasic.c
PG4-Try2/: CMakeLists.txt  executeTests.sh
PG4-Try2/src/: function.cpp
PG4-Try2/src/expressions/: and.cpp  and.h  bool.cpp  bool2Int.h  comparison.cpp  division.cpp  division.h  int2Bool.cpp  multiplication.cpp  multiplication.h  negative.cpp  negative.h  sub.cpp
PG4-Try2/src/frontend/: lexer.l  parser.y
PG4-Try2/src/statements/: for.cpp  for.h  while.h
PG4-Try2/tests/: addition.c  forBasic.c
PS2/: problem4flex.l
PS2/As2/: a  a.out  a.txt  lex.yy.c  problem4flex.l  problem4output
PS3/: CSDS337-2024-PS3.tex  main.tex
ProblemSet-5/: README.md
ProblemSet-5/src/program/: a.c  analysis.ipynb  as.py  makefile  run.sh
dragon-front-source/front/input/: PG1-1-correct.t
dragon-front-source/front/inter/: For.java
dragon-front-source/front/lexer/: Tag.java
dragon-front-source/front/output/: PG1-2-correct.i
